2005-08-21  David N. Welton  <davidw@dedasys.com>

	* doc/rivet.xml: Updated build directions to ./configure ; make ;
	make install.

	* src/rivetCore.c (Rivet_Upload): Fixed a line that is complained
	about in newer GCC's (casting lvalues).

2005-08-19  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_InitTclStuff): Use both the hostname and
	the port in creating names for the slave.  This fixes a bug where
	you have different virtual hosts running on the same server name
	but different ports.

2005-08-13  David N. Welton  <davidw@dedasys.com>

	* tests/apachetest/apachetest.tcl: Make sure we get our own
	version of http.tcl.  Tcl Feature request 928154 means that we
	need our own copy of http.tcl for now.

	* tests/runtests.tcl (runtests_usage): Print out an error message
	if the arguments aren't right. Fixed paths to load .so files, as
	the auto tools put them in a different place.

	* tests/apachetest/apachetest.tcl (apachetest::getbinname): Check
	to make sure the server is executable.

	* src/apache_request.c (ApacheRequest_parse_urlencoded): Patch
	from Arnulf Wiedemann to allow XML POST data.

	* src/rivetCore.c (Rivet_RawPost): Tcl command implementation to
	fetch raw POST data or an empty string if none is available.

	* src/apache_request.h: Added element to struct, and accessor
	function.

	* src/apache_request.c (ApacheRequest_parse_urlencoded): Save a
	pointer to the raw data.

	* src/TclWebapache.c (TclWeb_GetRawPost): Added a raw POST data
	fetcher here.

2005-08-12  David N. Welton  <davidw@dedasys.com>

	* configure.ac: Bump the version to 0.6.0.

	* src/apache_request.c (ApacheRequest_parse_multipart): Added code
	from httpd-apreq that supposedly deals with a problem in Opera
	file uploads.

2005-08-01  Karl Lehenbauer  <karl-rivet@sc.com>
	* abort_page was, for all intents and purposes, completely and utterly 
	  broken -- it forced a return from whatever called it, as if it was 