@@ -12,3 +12,20 @@ div.navheader  {
 div.navfooter {
     font-weight: bold;
 }
+
+a {
+    text-decoration: none;
+}
+
+a:link {
+    font-weight: bold;
+}
+a:visited {
+    font-weight: normal;
+}
+a:active {
+    text-decoration: underline;
+}
+a:hover {
+    text-decoration: underline;
+}
